--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body>
+<body >
   <!-- <div class="se-pre-con"></div> -->
   <section>
     <app-sidebar></app-sidebar>
@@ -14,15 +14,8 @@
     <!-- main content end-->
   </section>
   <!--footer section start-->
-  <footer class="dashboard">
-    <p>&copy 2020 Collective. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank"
-        class="text-primary">W3layouts.</a></p>
-  </footer>
+  <app-footer></app-footer>
   <!--footer section end-->
-
-
-
-
 </body>
 
 
